--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewsport" content="width=device-width, intial-scale=1.0" />
         <title>Home | Netflix</title>
-        <link rel="stylesheet" href=""home_page.css>
-        <script src="script2.js"></script>
+        <link rel="stylesheet" href="home_page.css"/>
+        <script src="script.js"></script>
     </head>
     <body>
         <!--navbar-->
