adding query selector

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <script>
             window.addEventListener("scroll",function(){
-                var nav = document.querySelection(".nav");
+                var nav = document.querySelector(".nav");
                 nav.classList.toggle("active",window.scrollY > 0);
             })   
         </script>
