--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav">
             <div class="nav__left">
                 <a href="index.html">
-                <img class="nav_logo" src="images\Netflix_main.jpg" alt=""></a>   
+                <img class="nav_logo" src="images\Netflix name.png" alt=""></a>   
             </div>
             <div class="nav__right">
                 <img src="images\Netflix_Avatar.jpg" class="nav_avatar" alt="">  
