--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="row__posters"></div>
             </div>
         </div>
-
+<!-- easter egg -->
         <script>
             window.addEventListener("scroll",function(){
                 var nav = document.querySelector(".nav");
