another easter egg

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="banner__fadeBottom"></div>
         </header>
-
+<!-- another easter egg -->
         <!--row-->
         <div id="headrow">
             <div class="row">
