--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="banner__fadeBottom"></div>
         </header>
-
+<!-- fsdfasdfds -->
         <!--row-->
         <div id="headrow">
             <div class="row">
@@ -40,7 +40,7 @@
                 <div class="row__posters"></div>
             </div>
         </div>
-<!-- easter egg -->
+<!--not  easter egg -->
         <script>
             window.addEventListener("scroll",function(){
                 var nav = document.querySelector(".nav");
